# Doomculator

./: README.md  settings.gradle.kts
app/: build.gradle.kts
app/src/androidTest/java/com/example/calculadorachida/: ExampleInstrumentedTest.kt
app/src/main/: AndroidManifest.xml
app/src/main/cpp/: CMakeLists.txt  android_doom.c  android_doom.h  i_music_native.c  i_sound_stub.c
app/src/main/java/com/example/calculadorachida/: DoomSurfaceView.kt  MainActivity.kt
app/src/main/res/layout/: activity_main.xml
app/src/main/res/values/: colors.xml  strings.xml  themes.xml
app/src/main/res/values-night/: themes.xml
app/src/main/res/xml/: network_security_config.xml
app/src/test/java/com/example/calculadorachida/: ExampleUnitTest.kt
gradle/wrapper/: gradle-wrapper.properties
